# ssh-broker-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
.sqlx/: query-40de98d9d750b82fb06d2fa7306acce7da06b2901bc3ad85afbbe78dd1620639.json  query-ae93ab675bccaa7b2173f7b539699e1cb26f4e87afc38716a89a5954823b1b31.json  query-cdec0b06060210f1903d1a9bee743cc8a52ccb13ce9c323bce7de1c6cb721dfa.json
crates/broker/: Cargo.toml
crates/broker/src/: audit.rs  config.rs  limits.rs  main.rs  policy.rs  rate_limit.rs  services.rs  sessions.rs  ssh.rs
crates/common/: Cargo.toml
crates/common/src/: ids.rs  lib.rs  model.rs  store.rs
crates/enroll/: Cargo.toml
crates/enroll/src/: main.rs
crates/mcp-adapter/: Cargo.toml
crates/mcp-adapter/src/: main.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/sshbroker/v1/: sshbroker.proto
crates/proto/src/: lib.rs
crates/ui-service/: Cargo.toml
crates/ui-service/src/: main.rs
ui-web/: index.html  package.json  vite.config.ts
ui-web/src/ui/: App.tsx  api.ts  styles.css
