[workspace]
resolver = "2"
members = [
  "crates/proto",
  "crates/common",
  "crates/broker",
  "crates/enroll",
  "crates/mcp-adapter",
  "crates/ui-service",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie-private"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
futures-util = "0.3"
globset = "0.4"
ipnet = "2.9"
keyring = "3"
openidconnect = "3"
portable-pty = "0.8"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "signal", "time", "net", "io-util"] }
tonic = { version = "0.12", features = ["tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
totp-rs = "5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tower = "0.4"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
