 [package]
 name = "ssh-broker"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish = false
 
 [dependencies]
 anyhow.workspace = true
 clap.workspace = true
 tokio.workspace = true
 tonic.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 serde.workspace = true
 sqlx.workspace = true
 uuid.workspace = true
 
 ssh-broker-common = { path = "../common" }
 ssh-broker-proto = { path = "../proto" }
 
 [dependencies.tokio-stream]
 version = "0.1"
 features = ["net"]
