[package]
name = "ssh-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
globset.workspace = true
ipnet.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

ssh-broker-common = { path = "../common" }
ssh-broker-proto = { path = "../proto" }

[dependencies.tokio-stream]
version = "0.1"
features = ["net"]
