 [package]
 name = "ssh-broker-common"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish = false
 
 [dependencies]
 anyhow.workspace = true
 chrono.workspace = true
 rand.workspace = true
 serde.workspace = true
serde_json.workspace = true
 sqlx.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 uuid.workspace = true
 keyring.workspace = true
